--- a/jobs/signing/sign-artifacts/Jenkinsfile
+++ b/jobs/signing/sign-artifacts/Jenkinsfile
@@ -5,10 +5,8 @@ node {
     def buildlib = load("pipeline-scripts/buildlib.groovy")
     def commonlib = buildlib.commonlib
     commonlib.describeJob("sign-artifacts", """
-        --------------------------------------------------------
-        Sign OCP4 release image / clients and publish signatures
-        --------------------------------------------------------
-        Timing: The "release" job runs this after a release is accepted.
+        <h2>Sign OCP4 release image / clients and publish signatures</h2>
+        <b>Timing</b>: The "release" job runs this after a release is accepted.
         Can be run manually if that fails.
 
         See https://github.com/openshift/art-docs/blob/master/4.y.z-stream.md#sign-the-release
